// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button when a subtext prop is passed into the component does not render the subtext if the size prop is not "large" 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  max-height: 40px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c8 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  
</button>
`;

exports[`Button when a subtext prop is passed into the component renders the subtext if the size prop is "large" 1`] = `
.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 15px;
}

.c8 + .c0 {
  margin-left: 15px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  height: 48px;
  padding-left: 32px;
  padding-right: 32px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 {
  font-size: 14px;
  font-weight: 400;
  display: block;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="large"
>
  
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
    <span
      className="c2"
      data-element="subtext"
    >
      foo
    </span>
  </span>
  
</button>
`;

exports[`Button when no props other than children are passed into the component renders the default props and children to match the snapshot 1`] = `
<styled.button
  as="button"
  data-component="button"
  disabled={false}
  iconPosition=""
  iconType=""
  medium={true}
  renderAs="secondary"
  role="button"
  size="medium"
  subtext=""
  theme={
    Object {
      "colors": Object {
        "base": "#00A376",
        "border": "#668491",
        "brand": "#00DC00",
        "destructive": Object {
          "hover": "#9F2C3F",
        },
        "error": "#C7384F",
        "focus": "#FFB500",
        "info": "#0073C2",
        "primary": "#26A826",
        "secondary": "#006300",
        "success": "#00B000",
        "tertiary": "#004400",
        "warning": "#FFB500",
        "white": "#FFFFFF",
      },
      "disabled": Object {
        "background": "rgba(0,0,0,0.1)",
        "border": "#CCD6DA",
        "button": "#E5EAEC",
        "disabled": "rgba(0,0,0,0.55)",
        "input": "#F2F4F5",
        "text": "rgba(0,0,0,0.3)",
      },
      "name": "base",
      "text": Object {
        "color": "rgba(0,0,0,0.9)",
        "placeholder": "rgba(0,0,0,0.3)",
        "size": "14px",
      },
    }
  }
  variant="blue"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</styled.button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon after children 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  max-height: 40px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c8 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
  <span
    className="carbon-icon icon-filter"
    data-component="icon"
    data-element="filter"
  />
</button>
`;

exports[`Button when only the "iconPosition" and "iconType" props are passed into the component renders the default props and children to match the snapshot with the Icon before children 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 15px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  border: 2px solid transparent;
  box-sizing: border-box;
  background: transparent;
  border-color: #26A826;
  color: #26A826;
  font-weight: 600;
  padding-top: 1px;
  padding-bottom: 1px;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 14px;
  max-height: 40px;
  height: 40px;
  padding-left: 24px;
  padding-right: 24px;
}

.c1:hover {
  background: #006300;
  border-color: #006300;
  color: #FFFFFF;
}

.c1:focus {
  outline: solid 3px #FFB500;
}

.c1 + .c0 {
  margin-left: 16px;
}

.c1 .carbon-icon {
  margin-left: 0px;
  margin-right: 8px;
}

<button
  className="c0 c1"
  data-component="button"
  disabled={false}
  role="button"
  size="medium"
>
  <span
    className="carbon-icon icon-filter"
    data-component="icon"
    data-element="filter"
  />
  <span>
    <span
      data-element="main-text"
    >
      foo
    </span>
  </span>
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "blue" matches the snapshot when default props are passed 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "grey" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #335c6d;
  color: #335c6d;
}

.c1:hover {
  background: #003349;
  border: 1px solid #003349;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(51,92,109,.6);
  outline: none;
  background: #003349;
  border: 1px solid #003349;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ed1c5f;
  color: #ed1c5f;
}

.c1:hover {
  background: #be164c;
  border: 1px solid #be164c;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(243,46,109,.6);
  outline: none;
  background: #be164c;
  border: 1px solid #be164c;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "magenta-dull" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ca2a60;
  color: #ca2a60;
}

.c1:hover {
  background: #a2224a;
  border: 1px solid #a2224a;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(213,85,128,.6);
  outline: none;
  background: #a2224a;
  border: 1px solid #a2224a;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "red" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #c7384f;
  color: #c7384f;
}

.c1:hover {
  background: #9f2d3f;
  border: 1px solid #9f2d3f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(228,44,45,.6);
  outline: none;
  background: #9f2d3f;
  border: 1px solid #9f2d3f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the classic theme is applied setting the color variant to "white" matches the snapshot when default props are passed 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ffffff;
  color: rgba(0,0,0,85);
}

.c1:hover {
  background: #ccc;
  border: 1px solid #ccc;
  color: #1b1d21;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(51,92,109,.6);
  outline: none;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "blue" matches the snapshot with the default props 1`] = `
.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #255bc7;
  color: #255bc7;
}

.c1:hover {
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(25,99,246,.6);
  outline: none;
  background: #1e499f;
  border: 1px solid #1e499f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "grey" matches the snapshot with the default props 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #335c6d;
  color: #335c6d;
}

.c1:hover {
  background: #003349;
  border: 1px solid #003349;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(51,92,109,.6);
  outline: none;
  background: #003349;
  border: 1px solid #003349;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta" matches the snapshot with the default props 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ed1c5f;
  color: #ed1c5f;
}

.c1:hover {
  background: #be164c;
  border: 1px solid #be164c;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(243,46,109,.6);
  outline: none;
  background: #be164c;
  border: 1px solid #be164c;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "magenta-dull" matches the snapshot with the default props 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ca2a60;
  color: #ca2a60;
}

.c1:hover {
  background: #a2224a;
  border: 1px solid #a2224a;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(213,85,128,.6);
  outline: none;
  background: #a2224a;
  border: 1px solid #a2224a;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "red" matches the snapshot with the default props 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #c7384f;
  color: #c7384f;
}

.c1:hover {
  background: #9f2d3f;
  border: 1px solid #9f2d3f;
  color: #ffffff;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(228,44,45,.6);
  outline: none;
  background: #9f2d3f;
  border: 1px solid #9f2d3f;
  color: #ffffff;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;

exports[`Button when the color variant is set to "white" matches the snapshot with the default props 1`] = `
.c2 + .c0 {
  margin-left: 15px;
}

.c3 + .c0 {
  margin-left: 15px;
}

.c4 + .c0 {
  margin-left: 15px;
}

.c5 + .c0 {
  margin-left: 15px;
}

.c6 + .c0 {
  margin-left: 15px;
}

.c1 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex-flow: wrap;
  -ms-flex-flow: wrap;
  flex-flow: wrap;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  vertical-align: middle;
  box-sizing: border-box;
  font-weight: 700;
  background: transparent;
  border: 1px solid #ffffff;
  color: rgba(0,0,0,85);
}

.c1:hover {
  background: #ccc;
  border: 1px solid #ccc;
  color: #1b1d21;
}

.c1:focus {
  box-shadow: 0 0 6px rgba(51,92,109,.6);
  outline: none;
}

.c1 + .c0 {
  margin-left: 15px;
}

.c1 .carbon-icon {
  margin-left: 8px;
  margin-right: 0px;
}

.c7 + .c0 {
  margin-left: 16px;
}

.c8 + .c0 {
  margin-left: 16px;
}

.c9 + .c0 {
  margin-left: 16px;
}

.c10 + .c0 {
  margin-left: 16px;
}

.c11 + .c0 {
  margin-left: 16px;
}

.c12 + .c0 {
  margin-left: 16px;
}

.c13 + .c0 {
  margin-left: 16px;
}

.c14 + .c0 {
  margin-left: 16px;
}

.c15 + .c0 {
  margin-left: 16px;
}

.c16 + .c0 {
  margin-left: 16px;
}

.c17 + .c0 {
  margin-left: 16px;
}

.c18 + .c0 {
  margin-left: 16px;
}

.c19 + .c0 {
  margin-left: 16px;
}

.c20 + .c0 {
  margin-left: 16px;
}

.c21 + .c0 {
  margin-left: 16px;
}

<button
  className="c0 c1"
>
  Foo
</button>
`;
